.kube/infrastructure/elastic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  selector:
    matchLabels:
      app: elasticsearch
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: elasticsearch:7.9.0
          resources:
            requests:
              memory: 4Gi
            limits:
              memory: 5Gi
          ports:
            - containerPort: 9200
            - containerPort: 9300
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  selector:
    app: elasticsearch
  type: ClusterIP
  ports:
    - port: 9200
      targetPort: 9200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 256m
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
  labels:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/app: elasticsearch
  name: elasticsearch
spec:
  ingressClassName: nginx
  rules:
    - host: elastic.labofdev.ru
      http:
        paths:
          - backend:
              service:
                name: elasticsearch
                port:
                  number: 9200
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - elastic.labofdev.ru
      secretName: elastic.labofdev.ru
